[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = ""
authors = ["BogdanovaMF <122004102+BogdanovaMF@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "test_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
